# OpenCom

./: .env.example  .gitignore  8.1  BUILD.md  Dockerfile  README.md  build.bat  config.py  docker-compose.yml  fix_path_now.ps1  fix_python_path.ps1  pip.cmd  pyproject.toml  requirements.txt  run_backend.py  start.py  test_ports.py  要求.txt  问题.txt
.claude/: settings.local.json
.kkcode/: longagent-state.json  trust.json
backend/: main.py  port_scanner.py  serial_manager.py
backend/cli/: __init__.py  commands.py  main.py
electron/: main.js  package-lock.json  package.json  preload.js
electron/backend/_internal/backend/cli/: main.py
electron/backend/_internal/email_validator-2.3.0.dist-info/: RECORD
electron/backend/_internal/numpy-2.3.4.dist-info/: RECORD
electron/backend/_internal/websockets-16.0.dist-info/: RECORD
frontend/: .npmrc  index.html  package-lock.json  tsconfig.app.json  tsconfig.tsbuildinfo
frontend/src/: __init__.py  config.ts
plans/: config-examples.md  electron-packaging-plan.md  quick-start.md
release/: OpenCom Setup 0.1.0.exe.blockmap  builder-debug.yml
release/win-unpacked/resources/backend/_internal/backend/: main.py  port_scanner.py  serial_manager.py  websocket_manager.py
release/win-unpacked/resources/backend/_internal/backend/cli/: commands.py
scripts/: build.py  build_all.js  build_backend.py
shared/: models.py
tests/: test_api.py  test_serial_manager.py
